<resources>
    <!--Strings Name App y ActionBar -->
    <string name="app_name">Homtech</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">Principal</string>
    <string name="Menu">Menu Homtech</string>
    <string name="Conf_Luminaria">Configuracion Luminaria</string>
    <string name="Conf_Tug">Configuracion TUG</string>
    <string name="Conf_dimmer">Configuracion Dimmer</string>
    <string name="Conf_Aire">Configuracion A/A</string>

    <!--String Titulos Equipos -->
    <string name="title_aire">Aire Acondicionado</string>
    <string name="title_luminaria">Luminarias</string>
    <string name="title_dimmer">Dimmer</string>
    <string name="title_tug">Tomacorrinetes</string>

    <!--String Menu -->
    <string name="menu_tug">ON/OFF TUG</string>
    <string name="menu_luminaria">LUMINARIA</string>
    <string name="menu_dimmer">DIMMER</string>
    <string name="menu_aire">A/A</string>

    <!--String General Configuracion Equipos -->
    <string name="conf_txt_btn1">Conectar</string>
    <string name="conf_txt_btn2">Guardar Datos</string>
    <string name="conf_id">ID:</string>
    <string name="conf_ip">IP:</string>
    <string name="conf_etxt1">Escribe nombre del Dispositivo</string>
    <string name="conf_etxt2">Escribe direccion IP</string>
    <string name="conf_msg2">Configuralo aqui:</string>

    <!-- String Configuracion Equipos -->
    <string name="conf_aire_msg1">¿Quieres configurar tu dispositivo A/A?</string>
    <string name="config_dimmer_msg1">¿Quieres configurar tu dispositivo Dimmer?</string>
    <string name="conf_lum_msg1">¿Quieres configurar tus dispositivos de luminaria ?</string>
    <string name="conf_lum_title">Ubicacion de luminarias:</string>
    <string name="conf_lum_etxt1">Escribe ubicacion 1</string>
    <string name="conf_lum_etxt2">Escribe ubicacion 2</string>
    <string name="conf_lum_etxt3">Escribe ubicacion 3</string>
    <string name="conf_lum_etxt4">Escribe ubicacion 4</string>
    <string name="conf_tug_msg1">¿Quieres configurar tu dispositivo TUG?</string>
    <string name="conf_tug_title">Tipos de Cargas:</string>
    <string name="conf_tug_chk1">Cafetera</string>
    <string name="conf_tug_chk2">Microondas</string>
    <string name="conf_tug_chk3">TV</string>
    <string name="conf_tug_chk4">Otros</string>

    <!-- String Informacion del Desarrollador -->
    <string name="acerca_de_msg1">¿Quieres saber acerca del Desarrollador de esta App?</string>
    <string name="acerca_de_msg2">Contactalo aqui:</string>
    <string name="acerca_de_info_developer1">Developer Android: Albert Sanchez</string>
    <string name="acerca_de_info_developer2">Tlf: +54 1135968008</string>
    <string name="acerca_de_info_developer3">Correo: Ing.albert.sanchez91@gmail.com</string>

    <!-- Conjunto de Strings para el View GameSpinner -->
    <string-array name="load">
        <item>Cafetera</item>
        <item>Microonda</item>
        <item>TV</item>
        <item>Otros</item>
    </string-array>

</resources>