<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/conf_aire_msg1"
        android:id="@+id/textView2"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/conf_msg2"
        android:id="@+id/textView3"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/conf_txt_btn1"
                android:id="@+id/btn_Conectar4"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conf_id"
                android:textSize="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <EditText
                android:id="@+id/edit_id4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conf_etxt1"
                android:textSize="17dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conf_ip"
                android:textSize="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/edit_ip4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/conf_etxt2"
                android:textSize="17dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                />


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/conf_txt_btn2"
                android:id="@+id/btn_GuardarAire"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>